test/semantics/programs/invalid/match-invalid-typed-var.fav
x = "hello"
match x with
1 -> " world"
| 2 -> " anson"
| 3 -> " toal"
| _ -> " everyone else"
